# libmusical

./: CHANGES  CMakeLists.txt  Doxyfile  INSTALL  README  TODO
applications/alignnlb/: CMakeLists.txt  alignnlb.cpp
applications/alignpitchcontext/: CMakeLists.txt  alignpitchcontext.cpp
applications/nlbdistmat/: CMakeLists.txt  nlbdistmat.cpp
applications/pitchcontextdistmat/: CMakeLists.txt  pitchcontextdistmat.cpp
applications/rismdistmat/: CMakeLists.txt  rismdistmat.cpp
libmusical/: CMakeLists.txt
libmusical/CSUUMidiReader/: csuu_pod.h  file_holder.h  midi2pod2.cpp  midi_reader.cpp  pod_rep.h
libmusical/IMACPP/: Makefile  MeterCollection.cpp  MetroMath.h  MetroWeights_Mazzola.cpp  Metrum.h  OnsetGroup_Memory.cpp  WeightSet.h
libmusical/core/: AffineGapRater.h  AffineGlobalAligner.cpp  AffineGlobalAligner.h  AffineLocalAligner.cpp  AffineLocalAligner.h  AlignmentAlgorithm.cpp  AlignmentAlgorithm.h  AlignmentVisualizer.cpp  AlignmentVisualizer.h  ConstantAffineGapRater.cpp  ConstantAffineGapRater.h  ConstantLinearGapRater.cpp  ConstantLinearGapRater.h  Converter.h  GapRater.cpp  GapRater.h  GeneralGlobalAligner.cpp  GeneralGlobalAligner.h  JSONFileSource.cpp  JSONMysqlSource.cpp  JSONMysqlSource.h  JSONReader.h  JSONSource.h  LinearGlobalAligner.cpp  LinearGlobalAligner.h  LinearLocalAligner.cpp  LinearLocalAligner.h  LocalAffineAligner.cpp  LocalAffineAligner.h  NWGTrace.cpp  NWGTrace.h  NWTrace.h  NeedlemanWunsch.cpp  NeedlemanWunsch.h  NeedlemanWunschGotoh.cpp  NeedlemanWunschGotoh.h  Reader.cpp  Reader.h  Sequence.h  Sequences.cpp  (+12 more)
libmusical/libjson/: JSONOptions.h
libmusical/specializations/midi/: MidiAlignment.h  MidiExactPitchIntervalSimilarityRater.cpp  MidiExactPitchIntervalSimilarityRater.h  MidiExactPitchSimilarityRater.cpp  MidiExactPitchSimilarityRater.h  MidiFileReader.cpp  MidiFileReader.h  MidiIOISimilarityRater.cpp  MidiIORSimilarityRater.cpp  MidiIORSimilarityRater.h  MidiJSONReader.cpp  MidiJSONReader.h  MidiPitchBandSimilarityRater.h  MidiPitchDurationSimilarityRater.cpp  MidiReader.cpp  MidiReader.h  MidiSequence.cpp  MidiSequence.h  MidiSymbol.cpp  MidiSymbol.h
libmusical/specializations/nlb/: ExactPitch40SimilarityRater.cpp  ExactPitch40SimilarityRater.h  NLBAlignment.h  NLBAlwaysOneSimilarityRater.cpp  NLBExactPitch40IMASimilarityRater.cpp  NLBExactPitch40IMASimilarityRater.h  NLBExactPitch40MWSimilarityRater.cpp  NLBExactPitch40MWSimilarityRater.h  NLBExactPitch40SimilarityRater.h  NLBIMAAffineGapRater.cpp  NLBIMAAffineGapRater.h  NLBIMAGapRater.cpp  NLBIMAGapRater.h  NLBJSONReader.cpp  NLBJSONReader.h  NLBMidiIntervalSimilarityRater.h  NLBOptiSimilarityRater.cpp  NLBOptiSimilarityRater.h  NLBPitchbandIMASimilarityRater.h  NLBSequence.cpp  NLBSequences.cpp  NLBSequences.h  NLBSymbol.cpp  NLBSymbol.h  OptiAlignment.h  OptiJSONReader.cpp  OptiJSONReader.h  OptiJSONReader_Registry.cpp  OptiReader.cpp  OptiReader.h  OptiReader_Registry.cpp  OptiReader_Registry.h  OptiSequence.cpp  OptiSequence.h  OptiSequences.cpp  OptiSequences.h  OptiSimilarityRater.cpp  OptiSimilarityRater.h  OptiSimilarityRater_Registry.cpp  OptiSimilarityRater_Registry.h  (+1 more)
libmusical/specializations/pitchcontext/: PCAlignment.h  PCAlwaysOneSimilarityRater.cpp  PCAlwaysOneSimilarityRater.h  PCCosSimilarityRater.cpp  PCCosSimilarityRater.h  PCSSSimilarityRater.cpp  PCSSSimilarityRater.h  PCSequence.cpp  PCSequence.h  PCSequences.cpp  PCSequences.h  PCSymbol.cpp  PCSymbol.h  PCTXTReader.cpp  PCTXTReader.h
trunk/: CHANGES  CMakeLists.txt  Doxyfile  README
trunk/Documentation/: libmusical-manual.lyx  pvkbibliography.bib
trunk/Documentation/image/: alignment2.pptx  sequences.pptx
trunk/applications/: CMakeLists.txt
trunk/applications/alignmidi/: CMakeLists.txt  alignmidi.cpp
trunk/applications/alignnlb/: alignnlb.cpp
trunk/applications/mididistmat/: CMakeLists.txt
trunk/applications/nlbdistmat/: nlbdistmat.cpp
trunk/applications/testlibmusical/: CMakeLists.txt  musicaltest.cpp
trunk/libmusical/: CMakeLists.txt
trunk/libmusical/CSUUMidiReader/: csuu_midi.h
trunk/libmusical/IMACPP/: MeterCollection.h  MetroWeights_Mazzola.h  Metrum.cpp  OnsetGroup_Memory.h  copyright_mail.txt
trunk/libmusical/core/: AffineGapRater.cpp  AffineGapRater.h  AffineGlobalAligner.cpp  AffineGlobalAligner.h  AffineLocalAligner.cpp  AffineLocalAligner.h  AlignmentAlgorithm.cpp  AlignmentAlgorithm.h  AlignmentAlgorithm_NIEUW.h  AlignmentVisualizer.cpp  AlignmentVisualizer.h  ConstantAffineGapRater.h  ConstantLinearGapRater.cpp  ConstantLinearGapRater.h  Converter.cpp  GapRater.cpp  GapRater.h  GeneralGlobalAligner.h  JSONFileSource.cpp  JSONFileSource.h  JSONReader.cpp  JSONReader.h  JSONSource.cpp  JSONSource.h  LinearGlobalAligner.cpp  LinearLocalAligner.cpp  LinearLocalAligner.h  LocalAffineAligner.h  NWGTrace.h  NWTrace.cpp  NWTrace.h  NeedlemanWunsch.cpp  NeedlemanWunsch.h  NeedlemanWunschGotoh.cpp  NeedlemanWunschGotoh.h  Reader.cpp  Reader.h  Sequence.cpp  Sequence.h  Sequences.cpp  (+12 more)
trunk/libmusical/specializations/midi/: MidiAlignment.h  MidiExactPitchIntervalSimilarityRater.cpp  MidiExactPitchIntervalSimilarityRater.h  MidiFileReader.cpp  MidiFileReader.h  MidiIOISimilarityRater.h  MidiIORSimilarityRater.cpp  MidiIORSimilarityRater.h  MidiJSONReader.cpp  MidiJSONReader.h  MidiPitchBandSimilarityRater.cpp  MidiPitchDurationSimilarityRater.cpp  MidiPitchDurationSimilarityRater.h  MidiSequences.cpp  MidiSequences.h  MidiSymbol.cpp  MidiSymbol.h
trunk/libmusical/specializations/nlb/: ExactPitch40SimilarityRater.cpp  NLBAlignment.h  NLBAlwaysOneSimilarityRater.h  NLBExactPitch40SimilarityRater.cpp  NLBJSONReader.cpp  NLBJSONReader_Registry.cpp  NLBJSONReader_Registry.h  NLBMidiIntervalSimilarityRater.cpp  NLBOptiSimilarityRater.cpp  NLBPitchbandIMASimilarityRater.cpp  NLBPitchbandIMASimilarityRater.h  NLBPitchbandSimilarityRater.cpp  NLBPitchbandSimilarityRater.h  NLBSequence.h  NLBSequences.cpp  NLBSequences.h  NLBSimilarityRater.cpp  (+15 more)
trunk/test/: CMakeLists.txt  TestAlignment.cpp  TestReader.h  TestSimilarityRater.cpp  TestSimilarityRater.h  TestSymbol.cpp
(+18 files in other folders)
