set(libmusical_lib_src
	CSUUMidiReader/midi2pod2.cpp
	CSUUMidiReader/midi_reader.cpp
	IMACPP/MeterCollection.cpp
	IMACPP/MetroWeights_Mazzola.cpp
	IMACPP/Metrum.cpp
	IMACPP/OnsetGroup_Memory.cpp
	core/AlignmentAlgorithm.cpp
	core/AlignmentVisualizer.cpp
	core/ConstantAffineGapRater.cpp
	core/ConstantLinearGapRater.cpp
	core/Converter.cpp
	core/GapRater.cpp
	core/AffineGapRater.cpp
	core/JSONFileSource.cpp
	core/JSONMysqlSource.cpp
	core/JSONReader.cpp
	core/JSONSource.cpp
	core/miscfunctions.cpp
	core/LinearGlobalAligner.cpp
	core/AffineGlobalAligner.cpp
	core/NWGTrace.cpp
	core/NWTrace.cpp
	core/Reader.cpp
	core/Sequence.cpp
	core/Sequences.cpp
	core/SimilarityRater.cpp
	core/LinearLocalAligner.cpp
	core/AffineLocalAligner.cpp
	core/Symbol.cpp
	core/SymbolRegistry.cpp
	core/Trace.cpp
	libjson/Source/internalJSONNode.cpp
	libjson/Source/JSON_Base64.cpp
	libjson/Source/JSONChildren.cpp
	libjson/Source/JSONDebug.cpp
	libjson/Source/JSONIterators.cpp
	libjson/Source/JSONMemory.cpp
	libjson/Source/JSONNode.cpp
	libjson/Source/JSONNode_Mutex.cpp
	libjson/Source/JSONStream.cpp
	libjson/Source/JSONValidator.cpp
	libjson/Source/JSONWorker.cpp
	libjson/Source/JSONWriter.cpp
	libjson/Source/libjson.cpp
	specializations/midi/MidiExactPitchIntervalSimilarityRater.cpp
	specializations/midi/MidiExactPitchSimilarityRater.cpp
	specializations/midi/MidiIORSimilarityRater.cpp
	specializations/midi/MidiIOISimilarityRater.cpp
	specializations/midi/MidiPitchDurationSimilarityRater.cpp
	specializations/midi/MidiPitchBandSimilarityRater.cpp
	specializations/midi/MidiJSONReader.cpp
	specializations/midi/MidiFileReader.cpp
	specializations/midi/MidiSymbol.cpp
	specializations/midi/MidiSequence.cpp
	specializations/midi/MidiSequences.cpp
	specializations/nlb/NLBExactPitch40SimilarityRater.cpp
	specializations/nlb/NLBExactPitch40IMASimilarityRater.cpp
	specializations/nlb/NLBMidiIntervalSimilarityRater.cpp
	specializations/nlb/NLBAlwaysOneSimilarityRater.cpp
	specializations/nlb/NLBJSONReader.cpp
	specializations/nlb/NLBSequence.cpp
	specializations/nlb/NLBSequences.cpp
	specializations/nlb/NLBOptiSimilarityRater.cpp
	specializations/nlb/NLBPitchbandIMASimilarityRater.cpp
	specializations/nlb/NLBPitchbandSimilarityRater.cpp
	specializations/nlb/NLBSymbol.cpp
)

include_directories(core libjson IMACPP CSUUMidiReader specializations/midi)

add_definitions(-DNDEBUG)

add_library(musical SHARED ${libmusical_lib_src})

install(
	FILES CSUUMidiReader/csuu_midi.h
		CSUUMidiReader/csuu_pod.h
		CSUUMidiReader/file_holder.h
		CSUUMidiReader/pod_rep.h
		IMACPP/MeterCollection.h
		IMACPP/MetroMath.h
		IMACPP/MetroWeights_Mazzola.h
		IMACPP/Metrum.h
		IMACPP/OnsetGroup_Memory.h
		IMACPP/WeightSet.h
		core/AlignmentAlgorithm.cpp
		core/AlignmentAlgorithm.h
		core/AlignmentVisualizer.h
		core/ConstantAffineGapRater.h
		core/ConstantLinearGapRater.h
		core/Converter.h
		core/GapRater.h
		core/AffineGapRater.h
		core/JSONFileSource.h
		core/JSONMysqlSource.h
		core/JSONReader.h
		core/JSONSource.h
		core/libmusical.h
		core/miscfunctions.h
		core/LinearGlobalAligner.h
		core/AffineGlobalAligner.h
		core/NWGTrace.h
		core/NWTrace.h
		core/Reader.h
		core/Sequence.h
		core/Sequences.h
		core/SimilarityRater.h
		core/LinearLocalAligner.h
		core/AffineLocalAligner.h
		core/Symbol.h
		core/SymbolRegistry.h
		core/Trace.h
		specializations/midi/MidiAlignment.h
		specializations/midi/MidiExactPitchIntervalSimilarityRater.h
		specializations/midi/MidiExactPitchSimilarityRater.h
		specializations/midi/MidiIORSimilarityRater.h
		specializations/midi/MidiIOISimilarityRater.h
		specializations/midi/MidiPitchDurationSimilarityRater.h
		specializations/midi/MidiPitchBandSimilarityRater.h
		specializations/midi/MidiFileReader.h
		specializations/midi/MidiJSONReader.h
		specializations/midi/MidiSymbol.h
		specializations/midi/MidiSequence.h
		specializations/midi/MidiSequences.h
		specializations/nlb/NLBExactPitch40SimilarityRater.h
		specializations/nlb/NLBExactPitch40IMASimilarityRater.h
		specializations/nlb/NLBMidiIntervalSimilarityRater.h
		specializations/nlb/NLBAlwaysOneSimilarityRater.h
		specializations/nlb/NLBAlignment.h
		specializations/nlb/NLBJSONReader.h
		specializations/nlb/NLBSequence.h
		specializations/nlb/NLBSequences.h
		specializations/nlb/NLBOptiSimilarityRater.h
		specializations/nlb/NLBPitchbandIMASimilarityRater.h
		specializations/nlb/NLBPitchbandSimilarityRater.h
		specializations/nlb/NLBSymbol.h
	DESTINATION include/libmusical)

install(DIRECTORY libjson/ DESTINATION include/libmusical FILES_MATCHING PATTERN "*.h" PATTERN ".svn" EXCLUDE)

install(TARGETS musical LIBRARY DESTINATION lib)
